--- a/rakefile
+++ b/rakefile
@@ -39,8 +39,8 @@ PKG_FILE_NAME = "#{PKG_NAME}-#{PKG_VERSION}"
 
 RELEASE_NAME  = "REL #{PKG_VERSION}"
 
-RUBY_FORGE_PROJECT = "rdig"
-RUBY_FORGE_USER    = "jkraemer"
+RUBYFORGE_PROJECT = "rdig"
+RUBYFORGE_USER    = "jkraemer"
 
 PKG_FILES = FileList[
     "bin/**/*",
@@ -129,7 +129,7 @@ else
 
     #### Dependencies and requirements.
 
-    s.add_dependency('ferret', '>= 0.3.2')
+    s.add_dependency('ferret', '>= 0.10.0')
     s.add_dependency('rubyful_soup', '>= 1.0.4')
     #s.requirements << ""
 
@@ -323,8 +323,21 @@ task :tag => [:prerelease] do
   end
 end
 
+# --------------------------------------------------------------------
+# Upload release to rubyforge
+desc "Upload release to rubyforge"
+task :prel do
+  `rubyforge login`
+  #for ext in %w( gem tgz )
+  for ext in %w( gem )
+    release_command = "rubyforge add_release #{RUBYFORGE_PROJECT} #{PKG_NAME} '#{PKG_VERSION}' pkg/#{PKG_NAME}-#{PKG_VERSION}.#{ext}"
+    puts release_command
+    system(release_command)
+  end
+end
+
 # Publish RDocs ------------------------------------------------------
 desc "Publish the API documentation"
 task :pdoc => [:rdoc] do
-  Rake::RubyForgePublisher.new(RUBY_FORGE_PROJECT, RUBY_FORGE_USER).upload
+  Rake::RubyForgePublisher.new(RUBYFORGE_PROJECT, RUBYFORGE_USER).upload
 end
