--- a/rakefile
+++ b/rakefile
@@ -134,7 +134,7 @@ else
     # TODO: check if there is anything like 'suggested' instead of required, or
     # ORed dependencies...
     #s.add_dependency('rubyful_soup', '>= 1.0.4')
-    #s.add_dependency('hpricot', '>= 0.4')
+    s.add_dependency('hpricot', '>= 0.4')
     #s.requirements << ""
 
     #### Which files are to be included in this gem?  Everything!  (Except CVS directories.)
