--- a/rakefile
+++ b/rakefile
@@ -132,6 +132,7 @@ else
 
     s.add_dependency('ferret', '>= 0.10.0')
     s.add_dependency('hpricot', '>= 0.6')
+    s.add_dependency('htmlentities', '>= 4.0.0')
     #s.requirements << ""
 
     #### Which files are to be included in this gem?  Everything!  (Except CVS directories.)
